commited from Sh

--- a/pandas_Shahane/pandas_Shahane_Arushanyan.ipynb
+++ b/pandas_Shahane/pandas_Shahane_Arushanyan.ipynb
@@ -256,7 +256,7 @@
    ],
    "source": [
     "import runner as rn\n",
-    "stats = rn.evaluate_performance()\n",
+    "stats = rn.evaluate_performance(X,y)\n",
     "print (\"Decision Tree Accuracy = \", stats[0, 0], \" (\", stats[0, 1], \")\")\n",
     "print (\"Random Forest Tree Accuracy = \", stats[1, 0], \" (\", stats[1, 1], \")\")"
    ]
