commited from Sh

--- a/Random_Forest_Shahane/Random_forest_demonstration.ipynb
+++ b/Random_Forest_Shahane/Random_forest_demonstration.ipynb
@@ -195,9 +195,14 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
     "df = pd.read_csv('SPECTF.dat')\n",
-    "df[:5]"
+    "\n",
+    "X = np.array(df.iloc[:,:-1])\n",
+    "y = np.array(df.iloc[:,0])\n",
+    "df[:5]\n"
    ]
   },
   {
@@ -243,7 +248,7 @@
    ],
    "source": [
     "import runner as rn\n",
-    "stats = rn.evaluate_performance()\n",
+    "stats = rn.evaluate_performance(X,y)\n",
     "print (\"Decision Tree Accuracy = \", stats[0, 0], \" (\", stats[0, 1], \")\")\n",
     "print (\"Random Forest Tree Accuracy = \", stats[1, 0], \" (\", stats[1, 1], \")\")"
    ]
