commited from Sh

--- a/pandas_Shahane/pandas_Shahane_Arushanyan.ipynb
+++ b/pandas_Shahane/pandas_Shahane_Arushanyan.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -189,7 +189,7 @@
        "[5 rows x 45 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,6 +205,44 @@
     "X = np.array(df.iloc[:,:-1])\n",
     "Y = np.array(df.iloc[:,0])\n",
     "df[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0xbd798d0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAW4AAAEICAYAAAB/Dx7IAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADfxJREFUeJzt3X+w5XVdx/Hny11x/YEiwjgroLv4a6JpNAe1aZSc0UnA\nFNN0gJxwtMws0ylzMCZByylraprSIpoIh1y1JEemqFDHH9OUPxZkEdRVBAwYfooICpsi7/44320O\nl3v23nXPr/fu8zFzZs/97rnf73s/5+zzfu/37I9UFZKkPh606AEkSXvHcEtSM4Zbkpox3JLUjOGW\npGYMtyQ1Y7i1MEk+leSX5/25i5DkeUmuX/Qc2j8Ybu2zJNcmecGi51iPJOck2ZnkviSvXvQ8uyXZ\nkuSTSe5O8tUu66nFMNw60OwA3gBcuuhBVvgA8EXgMcAZwIeTHL7YkbSsDLdmJsmjk/xLkluTfHu4\nf+SKhz0xyeeT3Jnko0kOHfv8n0ryX0nuSLIjyfMmHOdJST6d5DtJbkvyoUkzVdV7q+oTwK51zP+i\nJF8cZrsuyVljP7clSSU5Lcn/DMc9Y+znH5rkvOHX/WXgmXs4zlOAZwBnVtU9VXUBcDnw8rVm1IHJ\ncGuWHgT8PfAE4PHAPcB7Vjzml4DXAJuBe4G/AEhyBPCvwB8AhwJvAS6YcBb6+8DFwKOBI4G/nNL8\n3xvmOwR4EfBrSV664jHPAZ4KPB94e5IfG7afCTxxuL0QOG0Px/lx4Oqqumts245hu/QAhlszU1Xf\nqqoLquruIUrvAn5mxcPOr6orqup7wO8Br0yyAXgVcFFVXVRV91XVx4DtwImrHOoHjL44PK6qdlXV\nf05p/k9V1ZeG41/O6HLGyvnfMZwl72AU26cN218JvKuqbq+q6xi+IE3wCOA7K7bdCRy8778K7Y8M\nt2YmycOS/E2Sbya5E/gMcMgQ5t2uG7v/TeDBwGGMQvyK4TLJHUnuYHR2u3mVQ70VCPD5JFcmec2U\n5n/28IbhrUm+A7x+mG3cTWP372YUYYDH8cBf2yTfBR65YtujgLtWeaxkuDVTv83oMsKzq+qRwHHD\n9ow95qix+49ndPZ8G6PonV9Vh4zdHl5Vf7TyIFV1U1X9SlU9DvhV4K+SPGkK828DLgSOqqpHAWev\nmH1PbuSBv7ZJrgSOTjJ+hv20Ybv0AIZb0/LgJJvGbhsZfat/D3DH8Kbjmat83quSHJPkYcA7gQ9X\n1Q+BfwBenOSFSTYM+3zeKm9ukuQVY9u/DRRw32pDJjkoySZGAd4986TfBwcDt1fVriTPAk5d92rA\nPwJvG96gPRJ446QHVtXXgMuAM4d5Xgb8BHDBXhxPBxDDrWm5iFGkd9/OAv4ceCijM+jPAv++yued\nD5zH6JLDJuA3AYbrwicBvwvcyugM/HdY/TX7TOBzSb7L6Az5TVV19YQ5Lx7m+2ngnOH+cRMe+wbg\nnUnuAt7OKMbr9Q5Gl0euGY55/hqPPxk4ltEXnj8EfqGqbt2L4+kAEv8jBUnqxTNuSWrGcEtSM4Zb\nkpox3JLUzMZZ7PSwww6rLVu2zGLXkrRfuuSSS26rqnX9w2IzCfeWLVvYvn37LHYtSfulJHv627X3\n46USSWrGcEtSM4Zbkpox3JLUjOGWpGYMtyQ1Y7glqRnDLUnNGG5JasZwS1IzhluSmjHcktSM4Zak\nZgy3JDVjuCWpGcMtSc0YbklqxnBLUjOGW5KaMdyS1IzhlqRmDLckNWO4JakZwy1JzRhuSWrGcEtS\nM4Zbkpox3JLUjOGWpGYMtyQ1Y7glqRnDLUnNGG5JasZwS1IzhluSmjHcktSM4ZakZgy3JDVjuCWp\nGcMtSc0YbklqxnBLUjOGW5KaMdyS1IzhlqRmDLckNWO4JakZwy1JzRhuSWrGcEtSM4Zbkpox3JLU\njOGWpGY2zmSv11wDp546k10fULZtW/QEkpaQZ9yS1IzhlqRmDLckNWO4JakZwy1JzRhuSWrGcEtS\nM4Zbkpox3JLUjOGWpGYMtyQ1Y7glqRnDLUnNGG5JamZd4U5yfJKdSa5Kcvqsh5IkTbZmuJNsAN4L\nnAAcA5yS5JhZDyZJWt16zrifBVxVVVdX1feBDwInzXYsSdIk6wn3EcB1Yx9fP2y7nySvS7I9yfZb\nd+2a1nySpBWm9uZkVZ1TVcdW1bGHb9o0rd1KklZYT7hvAI4a+/jIYZskaQHWE+4vAE9OsjXJQcDJ\nwIWzHUuSNMma/8t7Vd2b5DeA/wA2AOdW1ZUzn0yStKo1ww1QVRcBF814FknSOvg3JyWpGcMtSc0Y\nbklqxnBLUjOGW5KaMdyS1IzhlqRmDLckNWO4JakZwy1JzRhuSWrGcEtSM+v6R6b22tatsG3bTHYt\nSQc6z7glqRnDLUnNGG5JasZwS1IzhluSmjHcktSM4ZakZgy3JDVjuCWpGcMtSc0YbklqxnBLUjOG\nW5KaMdyS1IzhlqRmDLckNWO4JakZwy1JzRhuSWrGcEtSM4Zbkpox3JLUjOGWpGYMtyQ1Y7glqRnD\nLUnNGG5JasZwS1IzhluSmjHcktSM4ZakZgy3JDVjuCWpGcMtSc0YbklqZuNM9nrNNXDqqTPZtSQt\npW3b5nYoz7glqRnDLUnNGG5JasZwS1IzhluSmjHcktSM4ZakZgy3JDVjuCWpGcMtSc0YbklqxnBL\nUjOGW5KaMdyS1Mya4U5ybpJbklwxj4EkSXu2njPu84DjZzyHJGmd1gx3VX0GuH0Os0iS1mFq17iT\nvC7J9iTbb921a1q7lSStMLVwV9U5VXVsVR17+KZN09qtJGkF/1SJJDVjuCWpmfX8ccAPAP8NPDXJ\n9UleO/uxJEmTbFzrAVV1yjwGkSStj5dKJKkZwy1JzRhuSWrGcEtSM4Zbkpox3JLUjOGWpGYMtyQ1\nY7glqRnDLUnNGG5JasZwS1Iza/4jUz+SrVth27aZ7FqSDnSecUtSM4Zbkpox3JLUjOGWpGYMtyQ1\nY7glqRnDLUnNGG5JasZwS1IzhluSmjHcktSM4ZakZgy3JDVjuCWpGcMtSc0YbklqxnBLUjOGW5Ka\nMdyS1IzhlqRmDLckNWO4JakZwy1JzRhuSWrGcEtSM4Zbkpox3JLUjOGWpGYMtyQ1Y7glqRnDLUnN\nGG5JasZwS1IzhluSmjHcktSM4ZakZgy3JDVjuCWpGcMtSc0YbklqxnBLUjOGW5KaMdyS1IzhlqRm\nDLckNWO4JakZwy1JzRhuSWrGcEtSM4Zbkpox3JLUjOGWpGYMtyQ1Y7glqZlU1fR3mtwF7Jz6jvfN\nYcBtix5iFcs41zLOBM61N5ZxJljOuZZlpidU1eHreeDGGQ2ws6qOndG+fyRJti/bTLCccy3jTOBc\ne2MZZ4LlnGsZZ1qLl0okqRnDLUnNzCrc58xov/tiGWeC5ZxrGWcC59obyzgTLOdcyzjTHs3kzUlJ\n0ux4qUSSmjHcktTMVMOd5PgkO5NcleT0ae57L+c4Ksknk3w5yZVJ3jRsPyvJDUkuG24nznmua5N8\naTj29mHboUk+luTrw4+PnvNMTx1bj8uS3JnkzYtYqyTnJrklyRVj2yauT5K3Da+1nUleOMeZ/iTJ\nV5NcnuQjSQ4Ztm9Jcs/Ymp09i5n2MNfE52yBa/WhsXmuTXLZsH2eazWpBwt9be2TqprKDdgAfAM4\nGjgI2AEcM6397+Usm4FnDPcPBr4GHAOcBbxlETMNs1wLHLZi2x8Dpw/3TwfevcD5NgA3AU9YxFoB\nxwHPAK5Ya32G53MH8BBg6/Da2zCnmX4W2Djcf/fYTFvGH7eAtVr1OVvkWq34+T8F3r6AtZrUg4W+\ntvblNs0z7mcBV1XV1VX1feCDwElT3P+6VdWNVXXpcP8u4CvAEYuYZR1OAt433H8f8NIFzvJ84BtV\n9c1FHLyqPgPcvmLzpPU5CfhgVf1vVV0DXMXoNTjzmarq4qq6d/jws8CR0z7ujzLXHixsrXZLEuCV\nwAemfdy17KEHC31t7YtphvsI4Lqxj69nCWKZZAvwk8Dnhk1vHL7FPXfelyWAAj6e5JIkrxu2Pbaq\nbhzu3wQ8ds4zjTuZ+//GWuRa7TZpfZbl9fYa4N/GPt46fOv/6STPXcA8qz1ny7BWzwVurqqvj22b\n+1qt6MGyv7Ym2q/fnEzyCOAC4M1VdSfw14wu5TwduJHRt27z9JyqejpwAvDrSY4b/8kafZ+2kD+f\nmeQg4CXAPw2bFr1WD7DI9VlNkjOAe4H3D5tuBB4/PMe/BWxL8sg5jrR0z9mYU7j/ScHc12qVHvy/\nZXttrWWa4b4BOGrs4yOHbQuR5MGMnqT3V9U/A1TVzVX1w6q6D/hb5vztT1XdMPx4C/CR4fg3J9k8\nzLwZuGWeM405Abi0qm4eZlzoWo2ZtD4Lfb0leTXwc8AvDr/pGb61/tZw/xJG10afMq+Z9vCcLXqt\nNgIvAz40Nutc12q1HrCkr631mGa4vwA8OcnW4eztZODCKe5/3YbraX8HfKWq/mxs++axh/08cMXK\nz53hTA9PcvDu+4ze4LqC0RqdNjzsNOCj85pphfudES1yrVaYtD4XAicneUiSrcCTgc/PY6AkxwNv\nBV5SVXePbT88yYbh/tHDTFfPY6bhmJOes4Wt1eAFwFer6vrdG+a5VpN6wBK+ttZtyu/ensjoHdtv\nAGcs6h1X4DmMvu25HLhsuJ0InA98adh+IbB5jjMdzeid6h3AlbvXB3gM8Ang68DHgUMXsF4PB74F\nPGps29zXitEXjhuBHzC6rvjaPa0PcMbwWtsJnDDHma5idA1092vr7OGxLx+e28uAS4EXz3mtJj5n\ni1qrYft5wOtXPHaeazWpBwt9be3Lzb/yLknN7NdvTkrS/shwS1IzhluSmjHcktSM4ZakZgy3JDVj\nuCWpmf8DQ0k73TVmfKAAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0xbd1fbe0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure(figsize=(7,7))\n",
+    "fig, ax = plt.subplots()\n",
+    "df[0].value_counts().plot(kind=\"barh\", color=\"red\", alpha=.65)\n",
+    "ax.set_ylim(-1, len(df[0].value_counts())) \n",
+    "plt.title(\"Labels 1 and 0\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -263,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -271,9 +309,7 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "train, test = train_test_split(df, test_size = 0.2)\n",
-    "train_y = train.iloc[:,0]\n",
-    "test_y = test.iloc[:,0]\n",
+    "train, test, train_y, test_y = train_test_split(X, Y, test_size=0.2, random_state=1)\n",
     "\n",
     "train_l = len(train)\n",
     "test_l = len(test)"
@@ -281,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -290,9 +326,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sklearn Random Forest accuracy: 96.289308\n",
-      "Sklearn Decision Tree accuracy: 100.000000\n",
-      "Sklearn Logistic Regression accuracy: 96.275332\n"
+      "Sklearn Random Forest accuracy: 0.944444\n",
+      "Sklearn Decision Tree accuracy: 1.000000\n",
+      "Sklearn Logistic Regression accuracy: 0.981481\n"
      ]
     }
    ],
@@ -302,13 +338,16 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.cross_validation import cross_val_score\n",
     "\n",
+    "\n",
     "clf = RandomForestClassifier(n_estimators=10, criterion='gini', max_depth=None, min_samples_split=10, min_samples_leaf=5, \n",
     "                             min_weight_fraction_leaf=0.0, max_features='auto', max_leaf_nodes=None, min_impurity_split=1e-07, \n",
     "                             bootstrap=True, oob_score=False, n_jobs=1, random_state=None, verbose=0, warm_start=False, \n",
     "                             class_weight=None) #Initialize with whatever parameters you want to\n",
     "\n",
     "clf.fit(train,train_y)\n",
-    "scores_ran = np.mean(cross_val_score(clf, X, Y, cv=5))*100\n",
+    "\n",
+    "pred_clf = clf.score(test, test_y)\n",
+    "\n",
     "\n",
     "log = LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
     "    intercept_scaling=1, max_iter=200, multi_class='ovr', n_jobs=3,\n",
@@ -316,7 +355,9 @@
     "    verbose=0, warm_start=False)\n",
     "        \n",
     "log.fit(train,train_y)\n",
-    "scores_log = np.mean(cross_val_score(log, X, Y, cv=5))*100\n",
+    "\n",
+    "pred_log = log.score(test, test_y)\n",
+    "\n",
     "\n",
     "\n",
     "dec = DecisionTreeClassifier(criterion='gini', splitter='best', max_depth=None, min_samples_split=2, \n",
@@ -324,7 +365,9 @@
     "                             max_leaf_nodes=None, min_impurity_split=1e-07, class_weight=None, presort=False)\n",
     "\n",
     "dec.fit(train,train_y)\n",
-    "scores_dec = np.mean(cross_val_score(dec, X, Y, cv=5))*100\n",
+    "\n",
+    "pred_dec = dec.score(test, test_y)\n",
+    "\n",
     "\n",
     "print('Sklearn Random Forest accuracy: %f' % scores_ran)\n",
     "print('Sklearn Decision Tree accuracy: %f' % scores_dec)\n",
@@ -340,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -355,7 +398,6 @@
        "      <th></th>\n",
        "      <th>Classifier Accuracy</th>\n",
        "      <th>Classifier Type</th>\n",
-       "      <th>Cross Validation</th>\n",
        "      <th>Test set size</th>\n",
        "      <th>Training set size</th>\n",
        "      <th>dataset</th>\n",
@@ -364,27 +406,24 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>96.2753</td>\n",
+       "      <td>0.981481</td>\n",
        "      <td>Logistic Regression</td>\n",
-       "      <td>5 folds</td>\n",
        "      <td>54</td>\n",
        "      <td>213</td>\n",
        "      <td>SPECTF.dat</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>100</td>\n",
+       "      <td>1</td>\n",
        "      <td>Desicion Tree</td>\n",
-       "      <td>5 folds</td>\n",
        "      <td>54</td>\n",
        "      <td>213</td>\n",
        "      <td>SPECTF.dat</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>96.2893</td>\n",
+       "      <td>0.944444</td>\n",
        "      <td>Random Forest</td>\n",
-       "      <td>5 folds</td>\n",
        "      <td>54</td>\n",
        "      <td>213</td>\n",
        "      <td>SPECTF.dat</td>\n",
@@ -393,7 +432,6 @@
        "      <th>3</th>\n",
        "      <td>68.8084</td>\n",
        "      <td>Shahane's Desicion tree</td>\n",
-       "      <td>5 folds</td>\n",
        "      <td>54</td>\n",
        "      <td>213</td>\n",
        "      <td>SPECTF.dat</td>\n",
@@ -402,7 +440,6 @@
        "      <th>4</th>\n",
        "      <td>77.7305</td>\n",
        "      <td>Shahane's Random Forest</td>\n",
-       "      <td>5 folds</td>\n",
        "      <td>54</td>\n",
        "      <td>213</td>\n",
        "      <td>SPECTF.dat</td>\n",
@@ -412,22 +449,22 @@
        "</div>"
       ],
       "text/plain": [
-       "  Classifier Accuracy          Classifier Type Cross Validation  \\\n",
-       "0             96.2753      Logistic Regression          5 folds   \n",
-       "1                 100            Desicion Tree          5 folds   \n",
-       "2             96.2893            Random Forest          5 folds   \n",
-       "3             68.8084  Shahane's Desicion tree          5 folds   \n",
-       "4             77.7305  Shahane's Random Forest          5 folds   \n",
+       "  Classifier Accuracy          Classifier Type  Test set size  \\\n",
+       "0            0.981481      Logistic Regression             54   \n",
+       "1                   1            Desicion Tree             54   \n",
+       "2            0.944444            Random Forest             54   \n",
+       "3             68.8084  Shahane's Desicion tree             54   \n",
+       "4             77.7305  Shahane's Random Forest             54   \n",
        "\n",
-       "   Test set size  Training set size     dataset  \n",
-       "0             54                213  SPECTF.dat  \n",
-       "1             54                213  SPECTF.dat  \n",
-       "2             54                213  SPECTF.dat  \n",
-       "3             54                213  SPECTF.dat  \n",
-       "4             54                213  SPECTF.dat  "
+       "   Training set size     dataset  \n",
+       "0                213  SPECTF.dat  \n",
+       "1                213  SPECTF.dat  \n",
+       "2                213  SPECTF.dat  \n",
+       "3                213  SPECTF.dat  \n",
+       "4                213  SPECTF.dat  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,11 +473,11 @@
     "from collections import OrderedDict\n",
     "\n",
     "\n",
-    "report = [{'dataset': dataset, 'Training set size': train_l, 'Test set size': test_l, 'Classifier Type': 'Logistic Regression', 'Classifier Accuracy': scores_log, 'Cross Validation': '5 folds'},\n",
-    "          {'dataset': dataset, 'Training set size': train_l, 'Test set size': test_l, 'Classifier Type': 'Desicion Tree', 'Classifier Accuracy': scores_dec, 'Cross Validation': '5 folds'},\n",
-    "         {'dataset': dataset, 'Training set size': train_l, 'Test set size': test_l, 'Classifier Type': 'Random Forest', 'Classifier Accuracy': scores_ran, 'Cross Validation': '5 folds'},\n",
-    "         {'dataset': dataset, 'Training set size': train_l, 'Test set size': test_l, 'Classifier Type': \"Shahane's Desicion tree\", 'Classifier Accuracy': \"68.8084\", 'Cross Validation': '5 folds'},\n",
-    "         {'dataset': dataset, 'Training set size': train_l, 'Test set size': test_l, 'Classifier Type': \"Shahane's Random Forest\", 'Classifier Accuracy': \"77.7305\", 'Cross Validation': '5 folds'}]\n",
+    "report = [{'dataset': dataset, 'Training set size': train_l, 'Test set size': test_l, 'Classifier Type': 'Logistic Regression', 'Classifier Accuracy': scores_log},\n",
+    "          {'dataset': dataset, 'Training set size': train_l, 'Test set size': test_l, 'Classifier Type': 'Desicion Tree', 'Classifier Accuracy': scores_dec},\n",
+    "         {'dataset': dataset, 'Training set size': train_l, 'Test set size': test_l, 'Classifier Type': 'Random Forest', 'Classifier Accuracy': scores_ran},\n",
+    "         {'dataset': dataset, 'Training set size': train_l, 'Test set size': test_l, 'Classifier Type': \"Shahane's Desicion tree\", 'Classifier Accuracy': \"68.8084\"},\n",
+    "         {'dataset': dataset, 'Training set size': train_l, 'Test set size': test_l, 'Classifier Type': \"Shahane's Random Forest\", 'Classifier Accuracy': \"77.7305\"}]\n",
     "df_report = pd.DataFrame(report)\n",
     "df_report"
    ]
@@ -462,7 +499,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
