updated modules and main

--- a/NN and differentiation/assignment1_modules_Shahane.ipynb
+++ b/NN and differentiation/assignment1_modules_Shahane.ipynb
@@ -31,7 +31,7 @@
     "    def __init__ (self):\n",
     "        self.output = None\n",
     "        self.gradInput = None\n",
-    "        self.train = True\n",
+    "        self.training = True\n",
     "    \"\"\"\n",
     "    Basically, you can think of a module as of a something (black box) \n",
     "    which can process `input` data and produce `ouput` data.\n",
@@ -186,6 +186,8 @@
     "        Adds a module to the container.\n",
     "        \"\"\"\n",
     "        self.modules.append(module)\n",
+    "        \n",
+    "           \n",
     "\n",
     "    def updateOutput(self, inpt):\n",
     "        \"\"\"\n",
@@ -199,14 +201,13 @@
     "            \n",
     "        Just write a little loop. \n",
     "        \"\"\"\n",
-    "        input1 = inpt\n",
+    "        output1 = inpt\n",
     "        for m in self.modules :\n",
-    "            output1 = m.forward(input1)\n",
-    "            self.y.append(output1)\n",
-    "            input1 = output1\n",
+    "            output1 = m.forward(output1)\n",
     "        \n",
-    "        self.output = input1\n",
+    "        self.output = output1\n",
     "        return self.output\n",
+    "    \n",
     "\n",
     "\n",
     "    def backward(self, inpt, gradOutput):\n",
@@ -230,13 +231,16 @@
     "        !!!\n",
     "        \n",
     "        \"\"\"\n",
-    "        length = len(self.modules)\n",
-    "        gradOutput1 = gradOutput\n",
-    "        for i in reversed(range(1, length)):\n",
-    "            gradOutput1 = self.modules[i].backward(self.y[i-1], gradOutput1)\n",
+    "        gradout = gradOutput\n",
+    "        for i, m in reversed(list(enumerate(self.modules))):\n",
+    "            if i == 0:\n",
+    "                gradout = self.modules[i].backward(inpt, gradout)\n",
+    "            else:\n",
+    "                gradout = self.modules[i].backward(self.modules[i-1].output, gradout)\n",
+    "        self.gradInput = gradout   \n",
     "        \n",
-    "        self.gradInput = self.modules[0].backward(inpt, gradOutput1)\n",
     "        return self.gradInput\n",
+    "    \n",
     "      \n",
     "\n",
     "    def zeroGradParameters(self): \n",
@@ -357,33 +361,24 @@
     "    \n",
     "    def updateOutput(self, inpt):\n",
     "        \n",
-    "        #x = inpt.dot(self.W.T) + self.b\n",
-    "        #exps = np.exp(x)\n",
-    "        #self.output = exps / np.sum(exps)\n",
     "        \n",
-    "        inpt = np.maximum(1e-17, np.minimum(inpt, 1 - 1e-17))\n",
-    "        self.output = np.exp(inpt)\n",
-    "        self.output /= np.sum(self.output, axis = 1)[:,None]\n",
+    "        exps = np.exp(inpt)\n",
+    "        leng = exps.shape[0]\n",
+    "        self.output = np.array([exps[i] / np.sum(exps[i]) for i in range(leng)])\n",
     "        \n",
     "        return self.output\n",
     "    \n",
+    "    \n",
     "    def updateGradInput(self, inpt, gradOutput):\n",
-    "     \n",
-    "        inpt = np.maximum(1e-17, np.minimum(inpt, 1 - 1e-17))\n",
-    "        out = np.exp(inpt)\n",
-    "        out = out/np.sum(out, axis = 1)[:,None]\n",
-    "        self.gradInput = np.zeros_like(out)\n",
     "        \n",
     "        \n",
-    "        self.gradInput = matrix = np.array([[np.sum([out[index,i] * (1 - out[index,j]) * gradOutput[index,i] if i == j \n",
-    "                                    else -out[index,i] * out[index,j] * gradOutput[index,i] \n",
-    "                                    for i in range(out.shape[1])])for j in range(out.shape[1])]for index in range(inpt.shape[0])])\n",
+    "        self.gradInput = self.output * (gradOutput - np.sum(np.multiply(self.output, gradOutput), axis = 1, keepdims=True))\n",
+    "        \n",
     "        return self.gradInput\n",
     "    \n",
-    "    def __repr__(self):\n",
-    "        return \"SoftMax\"\n",
     "    \n",
-    "    "
+    "    def __repr__(self):\n",
+    "        return \"SoftMax\"\n"
    ]
   },
   {
@@ -417,33 +412,35 @@
     "    def __init__(self, alpha = 0.95):\n",
     "        super(BatchMeanSubtraction, self).__init__()\n",
     "  \n",
-    "        if self.train:\n",
-    "            self.alpha = alpha\n",
-    "        else:\n",
-    "            self.alpha = 1\n",
+    "        \n",
+    "        self.alpha = alpha\n",
     "        self.old_mean = None \n",
+    "        \n",
+    "  \n",
     "        \n",
     "    def updateOutput(self, inpt):\n",
     "        \n",
     "        batch_mean = np.mean(inpt, axis = 0)\n",
     "        if self.old_mean is None:\n",
     "            self.old_mean =  batch_mean\n",
-    "        mean_to_subtract = self.old_mean * self.alpha + batch_mean * (1 - self.alpha)\n",
-    "        self.old_mean = mean_to_subtract\n",
-    "        self.output = inpt - mean_to_subtract\n",
-    "        \n",
+    "        alpha = self.alpha\n",
+    "\n",
+    "        if self.training ==False:\n",
+    "            alpha = 1\n",
+    "\n",
+    "        self.output = inpt - (self.old_mean * alpha + batch_mean * (1- alpha))\n",
     "        return self.output\n",
     "    \n",
+    "            \n",
+    "    \n",
+    "    \n",
     "    def updateGradInput(self, inpt, gradOutput):\n",
-    "        \n",
-    "        self.gradInput = gradOutput * (1 - 1./inpt.shape[0])\n",
-    "        #<Your Code Goes Here>\n",
-    "        \n",
+    "\n",
+    "        self.gradInput = gradOutput - ((1 - self.alpha)/inpt.shape[0]) * np.sum(gradOutput, axis=0, keepdims=True)\n",
     "        return self.gradInput\n",
     "    \n",
     "    def __repr__(self):\n",
-    "        return \"BatchMeanNormalization\"\n",
-    "\n"
+    "        return \"BatchMeanNormalization\"\n"
    ]
   },
   {
@@ -476,14 +473,17 @@
     "        \n",
     "        self.p = p\n",
     "        self.mask = None\n",
+    "        self.oldmask = None\n",
     "\n",
     "    def updateOutput(self, inpt):\n",
     "\n",
-    "        if self.train == False:\n",
-    "            return inpt * self.p\n",
+    "        self.mask = bernoulli.rvs(self.p, size = inpt.shape)\n",
+    "        if self.training == False:\n",
+    "            self.output = inpt * self.oldmask\n",
+    "        else:\n",
+    "            self.output = np.multiply(inpt, self.mask)\n",
+    "           \n",
     "        \n",
-    "        self.mask = bernoulli.rvs(self.p, inpt.shape[0])\n",
-    "        self.output = inpt.dot(self.mask)\n",
     "        return  self.output\n",
     "        \n",
     "    \n",
@@ -492,10 +492,10 @@
     "        self.gradInput = gradOutput * self.mask\n",
     "            \n",
     "        return self.gradInput\n",
-    "        \n",
+    "    \n",
+    "\n",
     "    def __repr__(self):\n",
-    "        return \"Dropout\"\n",
-    "    \n"
+    "        return \"Dropout\"\n"
    ]
   },
   {
@@ -526,24 +526,22 @@
     "    \n",
     "    def updateOutput(self, inpt):\n",
     "        \n",
-    "        \n",
     "        self.output = np.array([[int(i > 0) * i for i in item] for item in inpt])\n",
-    "        \n",
+    "\n",
     "        return self.output\n",
     "    \n",
     "    def updateGradInput(self, inpt, gradOutput):\n",
-    "\n",
     "                \n",
     "        self.gradInput = np.array([[int(i > 0) for i in item] for item in inpt])\n",
     "        \n",
     "        self.gradInput = self.gradInput * gradOutput\n",
+    "\n",
     "        \n",
     "        return self.gradInput\n",
     "    \n",
     "    def __repr__(self):\n",
     "        return \"ReLU\"\n",
-    "    \n",
-    "    "
+    "    \n"
    ]
   },
   {
@@ -568,35 +566,23 @@
     "        self.slope = slope\n",
     "        \n",
     "    def updateOutput(self, inpt):\n",
-    "        \n",
-    "        #for item in inpt:\n",
-    "           # for i in item:\n",
-    "             #   if i>0:\n",
-    "                   # self.gradInput = np.array([i])\n",
-    "                #else:\n",
-    "                    #self.gradInput = self.slope*i\n",
-    "        \n",
+    "\n",
     "        self.output = np.array([[i if i > 0 else self.slope * i for i in item] for item in inpt])\n",
-    "        \n",
+    "\n",
     "        return self.output\n",
     "    \n",
     "    def updateGradInput(self, inpt, gradOutput):\n",
-    "        \n",
-    "        #for item in inpt:\n",
-    "           # for i in item:\n",
-    "             #   if i>0:\n",
-    "                   # self.gradInput = np.array([1])\n",
-    "                #else:\n",
-    "                    #self.gradInput = self.slope \n",
     "                \n",
     "        self.gradInput = np.array([[1 if i > 0 else self.slope for i in item] for item in inpt])\n",
-    "        #<Your Code Goes Here>\n",
     "        \n",
+    "        self.gradInput = self.gradInput * gradOutput\n",
+    "\n",
     "        return self.gradInput\n",
     "    \n",
     "    def __repr__(self):\n",
     "        return \"LeakyReLU\"\n",
     "    \n",
+    "\n",
     "    "
    ]
   },
@@ -623,27 +609,13 @@
     "        \n",
     "    def updateOutput(self, inpt):\n",
     "        \n",
-    "        #for item in inpt:\n",
-    "           # for i in item:\n",
-    "             #   if i>0:\n",
-    "                   # self.output = np.array([i])\n",
-    "                #else:\n",
-    "                    #self.output = self.alpha * (np.exp(i) - 1)\n",
-    "        \n",
-    "        self.output = np.array([[i if i > 0 else self.alpha * (np.exp(i) - 1) for i in item] for item in inpt])\n",
+    "        self.output = np.array([[i if i >= 0  else self.alpha * (np.exp(i) - 1) for i in item] for item in inpt])\n",
     "        \n",
     "        return self.output\n",
     "    \n",
     "    def updateGradInput(self, inpt, gradOutput):\n",
-    "        \n",
-    "        #for item in inpt:\n",
-    "           # for i in item:\n",
-    "             #   if i>0:\n",
-    "                   # self.gradInput = np.array([1])\n",
-    "                #else:\n",
-    "                    #self.gradInput = self.alpha * np.exp(i)\n",
     "                    \n",
-    "        self.gradInput = np.array([[1 if i > 0 else self.alpha * (np.exp(i)) for i in item] for item in inpt])\n",
+    "        self.gradInput = np.array([[1 if i >= 0 else self.alpha * (np.exp(i)) for i in item] for item in inpt])\n",
     "        self.gradInput = self.gradInput * gradOutput\n",
     "\n",
     "        return self.gradInput\n",
@@ -652,7 +624,7 @@
     "        return \"ELU\"\n",
     "    \n",
     "\n",
-    "    "
+    "    \n"
    ]
   },
   {
@@ -687,7 +659,9 @@
     "        return self.gradInput\n",
     "    \n",
     "    def __repr__(self):\n",
-    "        return \"SoftPlus\"\n"
+    "        return \"SoftPlus\"\n",
+    "    \n",
+    "\n"
    ]
   },
   {
@@ -768,7 +742,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -778,20 +752,18 @@
     "\n",
     "    def updateOutput(self, inpt, target):  \n",
     "        \n",
-    "        self.output  = np.sum((inpt - target)**2)\n",
+    "        self.output = np.sum(((inpt - target)**2))/(target.shape[0] * target.shape[1])\n",
     "        \n",
     "        return self.output \n",
     " \n",
     "    def updateGradInput(self, inpt, target):\n",
     "        \n",
-    "        self.gradInput = 2 * inpt - 2 * target\n",
+    "        self.gradInput = 2 * (inpt - target)\n",
     "        \n",
     "        return self.gradInput\n",
     "\n",
     "    def __repr__(self):\n",
-    "        return \"MSECriterion\"\n",
-    "    \n",
-    "    "
+    "        return \"MSECriterion\"\n"
    ]
   },
   {
@@ -817,7 +789,7 @@
     "    def updateOutput(self, inpt, target): \n",
     "        \n",
     "        # Use this trick to avoid numerical errors\n",
-    "        input_clamp = np.maximum(1e-17, np.minimum(inpt, 1 - 1e-17) )\n",
+    "        input_clamp = np.maximum(1e-15, np.minimum(inpt, 1 - 1e-15) )\n",
     "        \n",
     "        self.output = -(np.multiply(target, np.log(input_clamp)).sum()) / inpt.shape[0]\n",
     "        \n",
@@ -826,18 +798,25 @@
     "    def updateGradInput(self, inpt, target):\n",
     "        \n",
     "        # Use this trick to avoid numerical errors\n",
-    "        input_clamp = np.maximum(1e-17, np.minimum(inpt, 1 - 1e-17) )\n",
+    "        input_clamp = np.maximum(1e-15, np.minimum(inpt, 1 - 1e-15) )\n",
     "                \n",
-    "        self.gradInput = -target/input_clamp/inpt.shape[0]\n",
+    "        self.gradInput = -target/input_clamp\n",
     "        \n",
     "        return self.gradInput\n",
     "    \n",
     "    def __repr__(self):\n",
     "        return \"ClassNLLCriterion\"\n",
-    "    \n",
-    "    \n",
-    "  "
+    "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -856,7 +835,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
