commited from Sh

--- a/TSA/Shahane_Practical1.ipynb
+++ b/TSA/Shahane_Practical1.ipynb
@@ -2660,6 +2660,13 @@
     "acc = 1 - loss\n",
     "print('Accuracy =','{:0.3f}%'.format(acc.values[0]*100))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4.5) I suppose that if we take a logarithm of our data and get rid of fluctuations Theil-wage model might give a better forcast."
+   ]
   }
  ],
  "metadata": {
